# TCC-code

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ESP32C3/: CMakeLists.txt  DCP  sdkconfig
ESP32C3/main/: idf_component.yml  main.cpp
PIC18F4550/: main.ASM
Pico2/: CMakeLists.txt  FreeRTOSConfig_examples_common.h
Pico2/hello_freertos/: CMakeLists.txt  hello_freertos.c
Pico2/main/: CMakeLists.txt  main.c
STM32F411C6/: .mxproject  CMakeLists.txt  freertos-cmake.ioc
STM32F411C6/Core/: DCP
STM32F411C6/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h
STM32F411C6/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32F411C6/Drivers/OLED/: ssd1306_conf.h
STM32F411C6/cmake/stm32cubemx/: CMakeLists.txt
components/: init.sh
main/: CMakeLists.txt  main.c  main.cpp
